<resources>
    <string name="app_name">Torrent Manager</string>
    <string name="use_tpb_summary">TPB is magnet based, works only on Wi-Fi</string>
    <string name="use_monova">Use Monova</string>
    <string name="use_monova_summary">Monova is magnet based, works only on Wi-Fi</string>
    <string name="use_kat_summary">KAT is magnet based, works only on Wi-Fi</string>
    <string name="use_yify">Use Yify</string>
    <string name="use_yify_summary">Yify is magnet based, works only on Wi-Fi</string>
    <string name="ringtone_not_set">Ringtone could not be set</string>
    <string name="dummy_title" translatable="false">[Title]</string>
    <string name="dummy_status" translatable="false">[Status]</string>
    <string name="dummy_speed" translatable="false">[Speed]</string>
    <string name="dummy_size" translatable="false">[Size]</string>
    <string name="dummy_extra" translatable="false">[Extra]</string>
    <string name="dummy_seeds" translatable="false">[Seeds]</string>
    <string name="dummy_peers" translatable="false">[Peers]</string>
    <string name="dummy_hint" translatable="false">[Hint]</string>
    <string name="dummy_peer_file_count" translatable="false">[Peer/File count]</string>
    <string name="torrent_max_peers_summary">Max Peers</string>
    <string name="torrent_max_peers">Max Peers</string>
    <string name="dummy_summary" translatable="false">[Summary]</string>
    <string name="dummy_version" translatable="false">[Version]</string>
    <string name="dummy_engine" translatable="false">[Engine]</string>
    <string name="dummy_sources" translatable="false">[Sources]</string>
    <string name="empty_string" translatable="false"/>
    <string name="dummy_downloads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="dummy_uploads_indicator" translatable="false">0 @ 0 KB/s</string>
    <string name="wifi_seeding_has_been_turned_off">No Wi-fi available, Seeding has been turned off</string>
    <string name="dummy_content_description" translatable="false">[dummy description]</string>
    <string name="dummy_media_controller_time" translatable="false">00:00</string>
    <string name="dummy_nickname" translatable="false">[Nickname]</string>
    <string name="dummy_action" translatable="false">[Action]</string>
    <string name="remove_torrent_and_data">Xóa torrent và dữ liệu</string>
    <string name="yes_no_cancel_transfer_question_cloud">Bạn có muốn dừng lại và xóa dữ liệu khỏi danh sách ?</string>
    <string name="bittorrent">BitTorrent</string>
    <string name="bittorrent_network_summary">Connection status</string>
    <string name="loading">Loading</string>
    <string name="wifi_sharing">Wi-Fi Sharing</string>
    <string name="activity_mediaplayer_name">Media Player</string>
    <string name="stop">Stop</string>
    <string name="donate_1">Donate $1</string>
    <string name="donate_5">Donate $5</string>
    <string name="donate_10">Donate $10</string>
    <string name="donate_25">Donate $25</string>
    <string name="couldnt_share_file">Could not share the file. Weird path found.</string>
    <string name="one_file_shared" >One file has been shared to TorrentManager devices on the same Wi-Fi network.</string>
    <string name="n_files_shared" >%d files has been shared to TorrentManager devices on the same Wi-Fi network.</string>
    <string name="playing_now_colon">Playing now:</string>
    <string name="my_filetype">My %s</string>
    <string name="paused">Paused</string>
    <string name="use_youtube">Use YouTube.com</string>
    <string name="use_soundcloud">Use Soundcloud.com</string>
    <string name="enable_wifi_sharing">Wi-Fi Sharing</string>
    <string name="enable_wifi_sharing_summary">Share files with peers on the local Wi-Fi network.</string>
    <string name="youtube_download_status_verifying">Verifying</string>
    <string name="donation_thanks">Thank you so much for Supporting TorrentManager</string>
    <string name="torrent_scheme_download_not_supported">Download not supported</string>
    <string name="retry_search">Retry</string>
    <string name="use_archiveorg">Use Archive.org</string>
    <string name="crawl_cache_size">Crawl cache %1$.2fMB</string>
    <string name="deleted_crawl_cache">Deleted crawl cache</string>
    <string name="clear_search_cache">Clear search cache</string>
    <string name="clear_search_cache_summary">Clear search cache entries</string>
    <string name="no_results_feedback">No results were found.</string>
    <string name="donate">Donate</string>
    <string name="one_dollar">$1</string>
    <string name="five_dollars">$5</string>
    <string name="ten_dollars">$10</string>
    <string name="twenty_five_dollars">$25</string>
    <string name="watch_tv">Watch TV</string>
    <string name="free_apps">Free Apps</string>
    <string name="use_frostclick">Use FrostClick</string>
    <string name="delete_this_track">Delete this track</string>
    <string name="are_you_sure_delete_current_track">Are you sure you want to delete the current track?</string>
    <string name="wifi_sharing_disabled">Wi-fi sharing is off.\n\nWi-fi sharing can be used to share files locally between TorrentManager powered devices connected to the same Wi-Fi network.\n\n&lt;a href=\"http://bit.ly/1tVReSt\"&gt;Learn more.&lt;/a&gt;</string>
    <string name="turn_on_wifi_sharing">Turn on Wi-fi Sharing</string>
    <string name="are_you_sure_wifi_sharing_off">Turning off Wi-Fi sharing will make all your locally shared files unavailable to other users on the nearby Wi-Fi network.</string>
    <string name="anonymous_usage_statistics">Anonymous Usage Statistics</string>
    <string name="anonymous_usage_statistics_summary">Send anonymous usage statistics. No information that can personally identify you will be stored on disk or sent through the network.</string>
    <string name="paused_song_name">Paused %s</string>
    <string name="use_bitsnoop">Use BitSnoop</string>
    <string name="use_torlock">Use TorLock</string>
    <string name="use_eztv">Use Eztv</string>
    <string name="transfer_status_demuxing">Demuxing</string>
    <string name="player_paused_press_and_hold_to_stop">Player paused. (Tip: Press and hold to stop)</string>
    <string name="btc">BTC</string>
    <string name="you_need_a_bitcoin_wallet_app">You need a Bitcoin wallet installed on you device to submit a BTC donation.</string>
    <string name="transfers_select_all">all</string>
    <string name="transfers_select_downloading">downloading</string>
    <string name="transfers_select_completed">completed</string>
    <string name="transfers_context_menu_clear_finished">Clear all finished transfers</string>
    <string name="transfers_context_menu_stop_delete_data">Stop and delete data</string>
    <string name="transfers_context_menu_copy_infohash_copied">Infohash copied to clipboard</string>
    <string name="transfers_context_menu_copy_magnet_copied">Magnet copied to clipboard</string>
    <string name="transfers_context_menu_copy_magnet">Copy Magnet</string>
    <string name="transfers_context_menu_copy_infohash">Copy InfoHash</string>
    <string name="transfers_context_menu_pause_stop_all_transfers">Pause/Stop all transfers</string>
    <string name="transfers_context_resume_all_torrent_transfers">Resume all torrent transfers</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="please_check_connection_status_before_resuming_download">Please check the status of your internet connection before resuming.</string>
    <string name="donate_in_btc">Donate in bitcoins</string>
    <string name="torrent_transfer_enqueued_on_mobile_data">The torrent transfer will start downloading automatically when you connect to a Wi-Fi network.(Check your Network Settings regarding 3G/4G data usage)</string>
    <string name="torrent_transfer_aborted_on_mobile_data">Torrent transfers will not start until you connect to a Wi-Fi network.(Check your Network Settings regarding 3G/4G data usage)</string>
    <string name="torrent_transfer_consuming_mobile_data">Warning: This torrent transfer is using your 3G/4G data. (Check your Network Settings if you wish to use BitTorrent only on WiFi)</string>
    <string name="add_transfer_label">Paste a magnet or torrent URL</string>
    <string name="please_enter_valid_url">Please enter a valid URL</string>
    <string name="magnet_url_added">Magnet URL added to transfers. (Magnets work best on Wi-Fi)</string>
    <string name="torrent_url_added">Torrent URL added to transfers.</string>
    <string name="cloud_downloads_coming">Sorry: Starting cloud downloads from here will be available on further updates.</string>
    <string name="seed">Seed</string>
    <string name="torrent_transfer_paused_disconnected_from_bittorrent">The transfer has been paused because you are Disconnected. (Check your BitTorrent connection in Settings)</string>
    <string name="remove_from_recent">Remove from recent</string>
    <string name="now_playing">Now playing</string>
    <string name="dummy_author" translatable="false">[Author]</string>
    <string name="install_bitcoin_wallet">Install Bitcoin Wallet</string>
    <string name="cant_resume_torrent_transfers">Cannot resume torrent transfers. Check status of "Settings" > "BitTorrent Connection Status"</string>
    <string name="or_enter_url">or enter URL</string>
    <string name="confirm_download">Confirm Download</string>
    <string name="track">track</string>
    <string name="playlist">playlist</string>
    <string name="are_you_sure_you_want_to_download_the_following">Are you sure you want to download the following %1$s (%2$s)?</string>
    <string name="prepend_shortcut_label" translatable="false"/>
    <string name="menu_enter_shortcut_label">Enter</string>
    <string name="menu_delete_shortcut_label">Del</string>
    <string name="menu_space_shortcut_label">Space</string>
    <string name="cant_open_file_does_not_exist">I can\'t open %1$s, the file does not exist.</string>
    <string name="saving_to_sd_card">Saving to SD card.</string>
    <string name="android_will_erase_files_if_frostwire_is_uninstalled">Android will erase downloaded files if TorrentManager is uninstalled.</string>
    <string name="saving_to_internal_memory">Saving to Internal Memory</string>
    <string name="saving_to_internal_memory_description">You also have an SD card (%1$s available)</string>
    <string name="device_memory">Device\'s Memory</string>
    <string name="device_storage">Device\'s Storage</string>
    <string name="sdcard_storage">SD\'s Storage</string>
    <string name="storage_setting_warning">WARNING: All files saved by TorrentManager onto the SD card will be deleted BY ANDROID, not TorrentManager, if you uninstall the app.</string>
    <string name="storage_setting_confirm_dialog_title">SD CARD</string>
    <string name="storage_setting_confirm_dialog_text">I understand that all files downloaded to the SD Card by TorrentManager will be deleted BY ANDROID the moment the TorrentManager application is uninstalled from this device and I will not hold TorrentManager LLC liable for any files lost.</string>
    <string name="available">available</string>
    <string name="file_descriptor_sd_mounted">This file was deleted from the SD card, or the SD card you have inserted is a different one.</string>
    <string name="file_descriptor_sd_unmounted">This file belongs to an SD card, please insert it on your device.</string>
    <string name="help_translate_frostwire">Help translate TorrentManager</string>
    <string name="queued_for_checking">Queued for checking</string>
    <string name="checking_ellipsis">Checking&#8230;</string>
    <string name="downloading_metadata">Downloading metadata</string>
    <string name="error_moving_incomplete">Error: Moving Incomplete</string>
    <string name="dht_contacts">DHT contacts</string>
</resources>