<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#fff">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BrowsePeerList.Item.Title"
        android:layout_marginBottom="5dp"
        android:text="@string/dummy_title"/>



    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BrowsePeerList.Item.Extra"
        android:layout_marginBottom="5dp"
        android:text="@string/dummy_extra" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ListItemSize"
        android:layout_marginBottom="2dip"
        android:text="@string/dummy_size"/>


    </LinearLayout>
</LinearLayout>
