<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2015, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <RadioGroup
        android:id="@+id/fragment_transfers_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:checkedButton="@+id/fragment_transfers_button_select_all"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fragment_transfers_button_select_all"
            style="@style/TransfersButton"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/transfers_select_all"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/fragment_transfers_button_select_downloading"
            style="@style/TransfersButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/transfers_select_downloading"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/fragment_transfers_button_select_completed"
            style="@style/TransfersButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/transfers_select_completed"
            android:textSize="12sp" />
    </RadioGroup>
    


    <ExpandableListView
        android:id="@+id/fragment_transfers_list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/body_background_gray_light"
        android:fadingEdge="none"
        android:groupIndicator="@android:color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

    <LinearLayout
        android:id="@+id/fragment_transfers_indicators"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/transfers_indicators_background">

        <!-- VPN status icon -->
        <ImageView android:id="@+id/fragment_transfers_status_vpn_icon"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/notification_vpn_off"
                   android:scaleType="fitXY"
                   android:layout_gravity="left|center_vertical"
                   android:layout_margin="10dp"
                   android:background="@android:color/transparent"/>

        <View android:layout_width="1px" android:layout_height="fill_parent" android:background="@android:color/black"/>

        <!-- DHT peers -->
        <TextView android:id="@+id/fragment_transfers_dht_peers"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/app_light_gray_text"
                  android:textSize="@dimen/text_extra_micro"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="5dp"
                  android:text="@string/dht_contacts"/>

        <View android:layout_weight="1.0" android:layout_width="0dp" android:layout_height="fill_parent"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="right|center_vertical">
            <TextView
                android:id="@+id/fragment_transfers_text_downloads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_downward"
                android:paddingRight="8dp"
                android:text="@string/dummy_downloads_indicator" />

            <TextView
                android:id="@+id/fragment_transfers_text_uploads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_upward"
                android:paddingRight="8dp"
                android:text="@string/dummy_uploads_indicator" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

</LinearLayout>
