<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

    <ExpandableListView
        android:id="@+id/fragment_transfers_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/body_background_gray_light"
        android:fadingEdge="none"
        android:groupIndicator="@android:color/transparent" />

        <android.support.design.widget.FloatingActionButton
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_input_add"
            android:id="@+id/fab">

        </android.support.design.widget.FloatingActionButton>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

    <LinearLayout
        android:id="@+id/fragment_transfers_indicators"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="#4CAF50">

        <!-- DHT peers -->
        <TextView
            android:id="@+id/fragment_transfers_dht_peers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/dht_contacts"
            android:textColor="@color/app_light_gray_text"
            android:textSize="@dimen/text_extra_micro" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical">

            <TextView
                android:id="@+id/fragment_transfers_text_downloads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_downward"
                android:paddingRight="8dp"
                android:text="@string/dummy_downloads_indicator" />

            <TextView
                android:id="@+id/fragment_transfers_text_uploads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_upward"
                android:paddingRight="8dp"
                android:text="@string/dummy_uploads_indicator" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

</LinearLayout>
