<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2015, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#4CAF50"></android.support.v7.widget.Toolbar>


    <ExpandableListView
        android:id="@+id/fragment_transfers_list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/body_background_gray_light"
        android:fadingEdge="none"
        android:groupIndicator="@android:color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

    <LinearLayout
        android:id="@+id/fragment_transfers_indicators"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/transfers_indicators_background">



        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <!-- DHT peers -->
        <TextView
            android:id="@+id/fragment_transfers_dht_peers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/dht_contacts"
            android:textColor="@color/app_light_gray_text"
            android:textSize="@dimen/text_extra_micro" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical">

            <TextView
                android:id="@+id/fragment_transfers_text_downloads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_downward"
                android:paddingRight="8dp"
                android:text="@string/dummy_downloads_indicator" />

            <TextView
                android:id="@+id/fragment_transfers_text_uploads"
                style="@style/TransfersIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/transfers_triangle_upward"
                android:paddingRight="8dp"
                android:text="@string/dummy_uploads_indicator" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ff1d2934" />

</LinearLayout>
